# subnautica-2-headtracking

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  LICENSE  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  pixi.toml
.github/: sn2-last-known-build.txt
.github/workflows/: build.yml  release.yml  sn2-patch-watch.yml
config/: default-mask-marks.txt
scripts/: check-fingerprint.ps1  deploy.ps1  derive_globals.py  derive_rvas.py  fast-debug-load.ps1  ghidra-headless.ps1  install.cmd  install.ps1  nexus-readme.md  package-release.ps1  release-nightly.ps1  release.ps1  scan-uobject-globals.ps1  uninstall.cmd  uninstall.ps1  update-deps.ps1
scripts/ghidra/: confirm_gpv_callers_pool.py  confirm_processevent.py  confirm_render_and_pool.py  disasm_range.py  disasm_uctw_candidates.py  disasm_vtslots.py  dump_bytes.py  dump_class_name_at.py  dump_fname_objarray_layout.py  dump_fov_builder.py  dump_function.py  dump_old_global_writers.py  dump_old_signatures.py  dump_pe.py  dump_pe_final.py  dump_pe_fingerprint.py  dump_pool_and_objarray.py  dump_reticle_funcs.py  dump_scenecomp_builder.py  dump_uobj_internals.py  find_attachparent_offset.py  find_camera_method_strings.py  find_camera_rtti.py  find_engine_version.py  find_fname_resolver.py  find_fnamepool2.py  find_gnames_guobjectarray.py  find_hover_state.py  find_mask_writer.py  find_pool_global_v2.py  find_processevent_v2.py  find_processevent_v3.py  find_processevent_vtable.py  find_property_offsets.py  find_real_processevent.py  find_relativerotation_offset.py  find_render_caller.py  find_reticle_strings.py  find_scenecomponent_props.py  find_showmousecursor.py  (+16 more)
src/Subnautica2HeadTracking/: aim_projection.cpp  aim_projection.h  crash_handler.cpp  crash_handler.h  dllmain.cpp  ghidra_offsets.h  headtracking_mod.cpp  headtracking_mod.h  logging.cpp  logging.h  reticle_overlay.cpp  reticle_overlay.h  ue_math.h  ue_runtime.cpp  ue_runtime.h
src/Subnautica2HeadTracking/builds/: build_profile.h  build_registry.cpp  build_registry.h  gdk_offsets.cpp  steam_offsets.cpp
tests/: containsci_equivalence.cpp  release-version-bump.Tests.ps1
